--- a/main.ipynb
+++ b/main.ipynb
@@ -1,8 +1,67 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "2c6f2672",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"test1\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c62f75c6",
+   "metadata": {},
+   "source": [
+    "# test 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fbe8e826",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "test2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"test2\")"
+   ]
+  }
+ ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv (3.8.10)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
