--- a/main.ipynb
+++ b/main.ipynb
@@ -1,5 +1,41 @@
 {
- "cells": [],
+ "cells": [
+  {
+   "cell_type": "markdown",
+   "id": "0",
+   "metadata": {},
+   "source": [
+    "# Setup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import cv2\n",
+    "import numpy as np\n",
+    "from matplotlib import pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "original_image = cv2.imread('test.jpg')\n",
+    "\n",
+    "image_rgb = cv2.cvtColor(original_image, cv2.COLOR_BGR2RGB)\n",
+    "plt.imshow(image_rgb)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  }
+ ],
  "metadata": {
   "language_info": {
    "name": "python"
