Add basic edge detection and comments

--- a/main.ipynb
+++ b/main.ipynb
@@ -29,8 +29,63 @@
    "source": [
     "original_image = cv2.imread('test.jpg')\n",
     "\n",
+    "# Converts the image to RGB instead OpenCV's default BGR format for matplotlib\n",
     "image_rgb = cv2.cvtColor(original_image, cv2.COLOR_BGR2RGB)\n",
+    "\n",
     "plt.imshow(image_rgb)\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3",
+   "metadata": {},
+   "source": [
+    "# Edge Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Converts image to grayscale for easier edge detection\n",
+    "image_gray = cv2.cvtColor(original_image, cv2.COLOR_BGR2GRAY)\n",
+    "\n",
+    "plt.imshow(image_gray, cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Blurs the grayscale image to reduce noise and improve edge detection\n",
+    "image_blurred = cv2.GaussianBlur(image_gray, (5, 5), 0)\n",
+    "\n",
+    "plt.imshow(image_blurred, cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uses Canny edge detection algorithm on blurred grayscale image\n",
+    "image_edges = cv2.Canny(image_blurred, 50, 150)\n",
+    "\n",
+    "plt.imshow(image_edges, cmap='gray')\n",
     "plt.axis('off')\n",
     "plt.show()"
    ]
