Add basic contour detection

--- a/main.ipynb
+++ b/main.ipynb
@@ -89,6 +89,33 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7",
+   "metadata": {},
+   "source": [
+    "# Contour Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Finds contours from the edges detected\n",
+    "contour, hierarchy = cv2.findContours(image_edges, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "\n",
+    "# Makes a copy of the original image to draw contours on\n",
+    "image_contours = original_image.copy()\n",
+    "cv2.drawContours(image_contours, contour, -1, (255, 0, 255), 2)\n",
+    "\n",
+    "plt.imshow(cv2.cvtColor(image_contours, cv2.COLOR_BGR2RGB))\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
