Add corner & shape detection (broken)

--- a/main.ipynb
+++ b/main.ipynb
@@ -116,6 +116,57 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9",
+   "metadata": {},
+   "source": [
+    "# Corner & Shape Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_shape = original_image.copy()\n",
+    "\n",
+    "# Iterates through each contour found\n",
+    "for cnt in contour:\n",
+    "    # Gets the perimeter of the contour\n",
+    "    perimeter = cv2.arcLength(cnt, True)\n",
+    "    # Uses Douglas-Peucker approximation method to approximate the contour to a polygon\n",
+    "    approx = cv2.approxPolyDP(cnt, 0.04 * perimeter, True)\n",
+    "\n",
+    "    # Gets the number of corners in the approximated polygon\n",
+    "    num_corners = len(approx)\n",
+    "\n",
+    "    # Calculates the aspect ratio of the bounding rectangle of the contour\n",
+    "    x, y, w, h = cv2.boundingRect(approx)\n",
+    "    aspect_ratio = float(w) / h\n",
+    "\n",
+    "    # Determines the shape based on the number of corners and aspect ratio\n",
+    "    shape = \"Unidentified\"\n",
+    "    if num_corners == 3:\n",
+    "        shape = \"Triangle\"\n",
+    "    elif num_corners == 4:\n",
+    "        if 0.95 <= aspect_ratio <= 1.05: # Checks aspect ratio to differentiate between square and rectangle\n",
+    "            shape = \"Square\"\n",
+    "        else:\n",
+    "            shape = \"Rectangle\"\n",
+    "    elif num_corners > 4:\n",
+    "        shape = \"Circle\"\n",
+    "\n",
+    "    # Draws the contour and shape name on the image\n",
+    "    cv2.drawContours(image_shape, [approx], -1, (255, 0, 255), 2)\n",
+    "    cv2.putText(image_shape, shape, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1.2, (0, 0, 0), 2)\n",
+    "plt.imshow(cv2.cvtColor(image_shape, cv2.COLOR_BGR2RGB))\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
   }
  ],
  "metadata": {
