--- a/main.ipynb
+++ b/main.ipynb
@@ -67,10 +67,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Blurs the grayscale image to reduce noise and improve edge detection\n",
-    "image_blurred = cv2.GaussianBlur(image_gray, (5, 5), 0)\n",
+    "# Thresholds the grayscale image (removing white background) to get a binary image\n",
+    "_, image_thresh = cv2.threshold(image_gray, 240, 255, cv2.THRESH_BINARY_INV)\n",
     "\n",
-    "plt.imshow(image_blurred, cmap='gray')\n",
+    "plt.imshow(image_thresh, cmap='gray')\n",
     "plt.axis('off')\n",
     "plt.show()"
    ]
@@ -83,7 +83,7 @@
    "outputs": [],
    "source": [
     "# Uses Canny edge detection algorithm on blurred grayscale image\n",
-    "image_edges = cv2.Canny(image_blurred, 50, 150)\n",
+    "image_edges = cv2.Canny(image_thresh, 50, 150)\n",
     "\n",
     "plt.imshow(image_edges, cmap='gray')\n",
     "plt.axis('off')\n",
@@ -106,11 +106,11 @@
    "outputs": [],
    "source": [
     "# Finds contours from the edges detected\n",
-    "contour, hierarchy = cv2.findContours(image_edges, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "contour, _ = cv2.findContours(image_edges, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
     "\n",
     "# Makes a copy of the original image to draw contours on\n",
     "image_contours = original_image.copy()\n",
-    "cv2.drawContours(image_contours, contour, -1, (255, 0, 255), 2)\n",
+    "cv2.drawContours(image_contours, contour, -1, (255, 0, 255), 3)\n",
     "\n",
     "plt.imshow(cv2.cvtColor(image_contours, cv2.COLOR_BGR2RGB))\n",
     "plt.axis('off')\n",
