--- a/main.ipynb
+++ b/main.ipynb
@@ -27,7 +27,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Loads the image and gets its dimensions\n",
     "original_image = cv2.imread('test.jpg')\n",
+    "H, W = original_image.shape[:2]\n",
     "\n",
     "# Converts the image to RGB instead OpenCV's default BGR format for matplotlib\n",
     "image_rgb = cv2.cvtColor(original_image, cv2.COLOR_BGR2RGB)\n",
@@ -82,7 +84,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uses Canny edge detection algorithm on blurred grayscale image\n",
+    "# Uses Canny edge detection algorithm on binary image\n",
     "image_edges = cv2.Canny(image_thresh, 50, 150)\n",
     "\n",
     "plt.imshow(image_edges, cmap='gray')\n",
@@ -105,8 +107,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Morphological operations to close gaps in edges and remove noise\n",
+    "kernel = cv2.getStructuringElement(cv2.MORPH_RECT, (5,5))\n",
+    "image_thresh = cv2.morphologyEx(image_thresh, cv2.MORPH_CLOSE, kernel, iterations=2)\n",
+    "image_thresh = cv2.morphologyEx(image_thresh, cv2.MORPH_OPEN, kernel, iterations=1)\n",
+    "\n",
+    "plt.imshow(image_thresh, cmap='gray')\n",
+    "plt.axis('off')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Finds contours from the edges detected\n",
     "contour, _ = cv2.findContours(image_edges, cv2.RETR_EXTERNAL, cv2.CHAIN_APPROX_SIMPLE)\n",
+    "contour = sorted(contour, key=cv2.contourArea, reverse=True)\n",
     "\n",
     "# Makes a copy of the original image to draw contours on\n",
     "image_contours = original_image.copy()\n",
@@ -119,7 +139,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "# Corner & Shape Detection"
@@ -128,18 +148,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
     "image_shape = original_image.copy()\n",
+    "# Sets a minimum area threshold to filter out noise (0.001% of image area)\n",
+    "min_area = 0.00001 * H * W\n",
     "\n",
     "# Iterates through each contour found\n",
     "for cnt in contour:\n",
+    "    area = cv2.contourArea(cnt)\n",
+    "    if area < min_area: # Filters out small contours that may be noise\n",
+    "        continue\n",
+    "\n",
     "    # Gets the perimeter of the contour\n",
     "    perimeter = cv2.arcLength(cnt, True)\n",
     "    # Uses Douglas-Peucker approximation method to approximate the contour to a polygon\n",
-    "    approx = cv2.approxPolyDP(cnt, 0.04 * perimeter, True)\n",
+    "    approx = cv2.approxPolyDP(cnt, 0.02 * perimeter, True)\n",
     "\n",
     "    # Gets the number of corners in the approximated polygon\n",
     "    num_corners = len(approx)\n",
@@ -163,6 +189,7 @@
     "    # Draws the contour and shape name on the image\n",
     "    cv2.drawContours(image_shape, [approx], -1, (255, 0, 255), 2)\n",
     "    cv2.putText(image_shape, shape, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1.2, (0, 0, 0), 2)\n",
+    "\n",
     "plt.imshow(cv2.cvtColor(image_shape, cv2.COLOR_BGR2RGB))\n",
     "plt.axis('off')\n",
     "plt.show()"
