--- a/main.ipynb
+++ b/main.ipynb
@@ -194,6 +194,100 @@
     "plt.axis('off')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "12",
+   "metadata": {},
+   "source": [
+    "# Color Detection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def detect_color(bgr_color):\n",
+    "    # Converts BGR color to HSV and determines the color name based on HSV values\n",
+    "    color = np.uint8([[bgr_color]])\n",
+    "    hsv = cv2.cvtColor(color, cv2.COLOR_BGR2HSV)[0][0]\n",
+    "    h, s, v = hsv\n",
+    "\n",
+    "    if v < 50:\n",
+    "        return \"Black\"\n",
+    "    if v > 200 and s < 40:\n",
+    "        return \"White\"\n",
+    "    if s < 40:\n",
+    "        return \"Gray\"\n",
+    "    if h < 10 or h >= 170:\n",
+    "        return \"Red\"\n",
+    "    elif 10 <= h < 25:\n",
+    "        return \"Orange\"\n",
+    "    elif 25 <= h < 35:\n",
+    "        return \"Yellow\"\n",
+    "    elif 35 <= h < 85:\n",
+    "        return \"Green\"\n",
+    "    elif 85 <= h < 125:\n",
+    "        return \"Blue\"\n",
+    "    elif 125 <= h < 170:\n",
+    "        return \"Purple\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_shape = original_image.copy()\n",
+    "for cnt in contour:\n",
+    "    area = cv2.contourArea(cnt)\n",
+    "    if area < min_area: # Filters out small contours that may be noise\n",
+    "        continue\n",
+    "\n",
+    "    # Gets the perimeter of the contour\n",
+    "    perimeter = cv2.arcLength(cnt, True)\n",
+    "    # Uses Douglas-Peucker approximation method to approximate the contour to a polygon\n",
+    "    approx = cv2.approxPolyDP(cnt, 0.02 * perimeter, True)\n",
+    "\n",
+    "    # Gets the number of corners in the approximated polygon\n",
+    "    num_corners = len(approx)\n",
+    "\n",
+    "    # Calculates the aspect ratio of the bounding rectangle of the contour\n",
+    "    x, y, w, h = cv2.boundingRect(approx)\n",
+    "    aspect_ratio = float(w) / h\n",
+    "\n",
+    "    # Determines the shape based on the number of corners and aspect ratio\n",
+    "    shape = \"Unidentified\"\n",
+    "    if num_corners == 3:\n",
+    "        shape = \"Triangle\"\n",
+    "    elif num_corners == 4:\n",
+    "        if 0.95 <= aspect_ratio <= 1.05: # Checks aspect ratio to differentiate between square and rectangle\n",
+    "            shape = \"Square\"\n",
+    "        else:\n",
+    "            shape = \"Rectangle\"\n",
+    "    elif num_corners > 4:\n",
+    "        shape = \"Circle\"\n",
+    "\n",
+    "    # Creates a mask for the contour to calculate the mean color inside it\n",
+    "    mask = np.zeros(image_gray.shape, dtype=\"uint8\")\n",
+    "    cv2.drawContours(mask, [cnt], -1, 255, -1)\n",
+    "    # Calculates the mean color inside the contour\n",
+    "    mean_val = cv2.mean(original_image, mask=mask)[:3]\n",
+    "    bgr_color = tuple(map(int, mean_val))\n",
+    "    shape_color = detect_color(bgr_color)\n",
+    "\n",
+    "    label = f\"{shape}, {shape_color}\"\n",
+    "    cv2.putText(image_shape, label, (x, y - 10), cv2.FONT_HERSHEY_SIMPLEX, 1.2, (0, 0, 0), 2)\n",
+    "\n",
+    "plt.imshow(cv2.cvtColor(image_shape, cv2.COLOR_BGR2RGB))\n",
+    "plt.axis('off')\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
