--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import cv2\n",
     "import numpy as np\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n"
    ]
   },
   {
